# narou_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/narou_rust_cli/: Cargo.toml
crates/narou_rust_cli/src/: interactive.rs  main.rs
crates/narou_rust_core/: Cargo.toml
crates/narou_rust_core/src/: app.rs  config.rs  convert.rs  diagnostic.rs  doctor.rs  kakuyomu.rs  lib.rs  model.rs  repair.rs  storage.rs  syosetu.rs
