[workspace]
members = [
  "crates/narou_rust_cli",
  "crates/narou_rust_core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Codex"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["charset", "cookies", "http2", "rustls-tls"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2.5"
